# meetio

./: .env.example  .gitignore  GEMINI.md  README.md  docker-compose.yml  package-lock.json  skills-lock.json
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  migrate-mongo-config.js  pyproject.toml  railway-beat.toml  railway-worker.toml
backend/app/: cache.py  celery_app.py  config.py  db.py  main.py  redis.py
backend/app/auth/: backend.py  manager.py  oauth.py  sessions.py
backend/app/lib/: audit.py  crypto.py  email.py  rate_limit.py
backend/app/models/: user.py
backend/app/routers/: __init__.py  _envelope.py  auth.py  health.py  settings.py  stubs.py  websocket.py
backend/app/schemas/: auth.py  settings.py  user.py
backend/app/tasks/: ai_pipeline.py  calendar.py  dlq.py  gdpr.py  notifications.py
backend/app/websocket/: connection_manager.py
backend/migrations/: 001_initial_schema.js  002_indexes.js  003_optional_unique_indexes.js  config.js
backend/scripts/: init_db.py
backend/tests/: conftest.py  test_auth_cookies.py  test_auth_core.py  test_auth_login.py  test_auth_logout.py  test_auth_password_policy.py  test_auth_refresh.py  test_auth_register.py  test_auth_reset.py  test_auth_session.py  test_celery.py  test_crypto.py  test_db.py  test_email_transport.py  test_health.py  test_notifications.py  test_oauth_google.py  test_redis.py  test_security_hardening.py  test_sessions.py  test_settings_2fa.py
docs/: secrets.md  setup.md
docs/_templates/: README.md  feature-breakdown-hierarchy-template.md  feature-breakdown-template.md  feature-task-template.md  mvp-roadmap-template.md  task-breakdown-template.md
docs/mvp/: meetio-feature-breakdown-docs.md  meetio-feature-breakdown-hierarchy.md  meetio-mvp-roadmap.md
docs/requirements/: conventions.md  design (1).md  design.md  meetio-api-spec.md  meetio-prd.md  (+3 more)
frontend/: .env.example  .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontned-slate/: 404-auth.html  404-guest.html  404page.html  dash.jsx  feature3.html  landing_page.html  logo-components.html  meetio_authentication.html  reset-password.html  signin.html  signup.html  toast-demo.html  top-nav.html  verify-otp.html
(+41 files in other folders)
