[project]
name = "meetio-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.27.1",
    "pydantic==2.6.4",
    "pydantic-settings~=2.2.1",
    "motor==3.4.0",
    "redis[asyncio]==5.0.3",
    "celery==5.3.6",
    "PyJWT>=2.8.0",
    "passlib[argon2]==1.7.4",
    "httpx==0.27.0",
    "livekit==0.12.0",
    "deepgram-sdk==3.2.7",
    "openai==1.14.3",
    "anthropic==0.20.0",
    "boto3==1.34.51",
    "resend==0.7.0",
    "pynacl==1.5.0",
    "structlog==24.1.0",
    "sentry-sdk[fastapi]==1.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
    "pytest-asyncio==0.23.5",
    "pytest-cov==5.0.0",
    "fakeredis==2.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
