[project]
name = "meetio"
version = "0.1.0"
description = "Advanced AI-powered video conferencing platform"
authors = [
    { name = "mynam", email = "mynam@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.27.1",
    "pydantic==2.6.4",
    "motor==3.4.0",
    "pymongo==4.7.2",
    "python-multipart==0.0.9",
    "redis[asyncio]==5.0.3",
    "celery==5.3.6",
    "fastapi-users[motor]==13.0.0",
    "PyJWT>=2.8.0",
    "passlib[argon2]==1.7.4",
    "httpx==0.26.0",
    "httpx-oauth==0.13.2",
    "livekit==0.12.0",
    "deepgram-sdk==3.2.7",
    "openai==1.14.3",
    "anthropic==0.20.0",
    "boto3==1.34.51",
    "resend==0.7.0",
    "pynacl==1.5.0",
    "cryptography>=42.0.0",
    "Pillow>=10.3.0",
    "python-slugify==8.0.4",
    "pyotp>=2.9.0",
    "langcodes==3.3.0",
    "slowapi==0.1.9",
    "structlog==24.1.0",
    "sentry-sdk[fastapi]==1.41.0",
    "pydantic-settings==2.2.1"
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
    "pytest-asyncio==0.23.5",
    "pytest-cov==5.0.0",
    "fakeredis==2.21.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
